--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
 
     <!-- Styles  -->
-
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="slick/slick/slick-theme.css">
+    <link rel="stylesheet" href="slick/slick/slick.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 
 
 
 </head>
 <body>
-    
     <header class="site-header">
         <div class="site-header__container">
             
@@ -182,6 +182,30 @@
 
         </div>
     </header>
+   
+
+    <div class="site-hero"> 
+            <ul class="list site-hero__carousel">
+                <li class="site-header-wrapper first-slide" >
+
+                </li>
+                <li class="site-header-wrapper second-slide" >
+
+                </li>
+                <li class="site-header-wrapper third-slide" >
+
+                </li>
+                <li class="site-header-wrapper fourth-slide" >
+
+                </li>
+            </ul>
+    </div>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="slick/slick/slick.min.js"></script>
+<script src="js/main.js"></script>
+
 
 
 </body>
