adding social link to site header

--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
                         <span>Devonxona: +998991234567</span>
                     </a>
                 </div>
+
+                <div class="site-header__socials">
+                    <a href="#" id="telegram-icon">
+                        <i class="fab fa-telegram"></i>
+                    </a>
+                    <a href="#" id="facebook-icon">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a href="#" id="youtube-icon">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="#" id="instagram-icon">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+
+                    <button class="site-header__login">
+                        Kirish <i class="fal fa-sign-in"></i>
+                    </button>
+                </div>
             </div>
 
             <nav class="site-nav">
