adding login popup

--- a/index.html
+++ b/index.html
@@ -58,6 +58,27 @@
                 </div>
             </div>
 
+            <div class="site-header__popup">
+                <div class="site-header__popup-wrapper ">
+                    <div class="site-header__popup-main">
+                        <button class="popup-close">
+                            <i class="fal fa-times"></i>
+                        </button>
+                        <header class="popup-header">
+                            <img src="images/gerb.png" alt="gerb" width="60" height="60">
+                            <h3 class="popup-header__title">O'zbekiston Resublikasi Suv xo'jaligi vazirligi</h3>
+                        </header>
+
+                        <form action="/" class="popup-form">
+                            <span class="popup-form__title">Kirish</span>
+                            <input type="text" placeholder="Loginni kiriting">
+                            <input type="password" placeholder="Parolni kiriting">
+                            <input type="submit" value="Kirish">
+                        </form>
+                    </div>
+                </div>
+            </div>
+
             <nav class="site-nav">
                 <div class="container site-nav__container">
                     <ul class="site-nav__list list">
