adding news section

--- a/pages/news.html
+++ b/pages/news.html
@@ -4,29 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asosiy sahifa</title>
-
+    <title>Yangiliklar</title>
 
     <!-- Styles  -->
-    <link rel="stylesheet" href="slick/slick/slick-theme.css">
-    <link rel="stylesheet" href="slick/slick/slick.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../slick/slick/slick-theme.css">
+    <link rel="stylesheet" href="../slick/slick/slick.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-
-
-
 </head>
+
+<style>
+    .site-header {
+        background: linear-gradient(to top, rgba(48, 63, 149,0.5), rgb(48, 63, 149,0.6) );
+    }
+
+    .site-nav__dropdown-menu {
+        box-shadow: rgba(48, 63, 149,0.3) 0px 4px 8px 0px;
+    } 
+
+    .second-dropdown {
+        box-shadow: rgba(48, 63, 149,0.3) 0px 4px 8px 0px;
+    }
+
+
+    .second-dropdown .dropdown-link {
+        color: #303F95 !important;
+    }
+
+    .option-langs {
+        box-shadow: rgba(48, 63, 149,0.3) 0px 4px 8px 0px;
+        color: #303F95;
+    }
+
+    .option-lang:hover {
+        background: rgba(48, 63, 149, 0.5);
+    }
+</style>
 <body>
 
-    <!-- SITE HEADER  -->
+       <!-- SITE HEADER  -->
 
-    <header class="site-header">
+       <header class="site-header">
         <div class="site-header__container">
             
             <div class="site-header__top container ">
-                <a href="#" class="site-logo">
-                    <img src="images/gerb.png#" alt="gerb" width="80" height="80">
+                <a href="../index.html" class="site-logo">
+                    <img src="../images/gerb.png#" alt="gerb" width="80" height="80">
                     <span>O`zbekiston Respublikasi Suv xo`jaligi vazirligi</span>
                 </a>
 
@@ -68,7 +92,7 @@
                             <i class="fal fa-times"></i>
                         </button>
                         <header class="popup-header">
-                            <img src="images/gerb.png" alt="gerb" width="60" height="60">
+                            <img src="../images/gerb.png" alt="gerb" width="60" height="60">
                             <h3 class="popup-header__title">O'zbekiston Resublikasi Suv xo'jaligi vazirligi</h3>
                         </header>
 
@@ -225,74 +249,12 @@
 
         </div>
     </header>
-   
-
-    <!-- SITE HERO  -->
-
-    <div class="site-hero"> 
-            <ul class="list site-hero__carousel">
-                <li class="site-header-wrapper first-slide" >
-
-                </li>
-                <li class="site-header-wrapper second-slide" >
-
-                </li>
-                <li class="site-header-wrapper third-slide" >
-
-                </li>
-                <li class="site-header-wrapper fourth-slide" >
-
-                </li>
-            </ul>
-    </div>
+    
 
 
-    <!-- NEWS  -->
 
 
-    <section class="news">
-        <div class="container news__container">
-
-            <h2 class="news__title">Новости</h2>
-
-            <ul class="news__list list">
-                <li class="news__item">
-                    <img class="news__image" src="images/news-img.png" alt="news image" width="360" height="214">
-                    <data class="news__data">20.10.2021</data>
-                    <a href="#" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
-                    <p class="news__text">
-                        На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
-                    </p>
-                </li>
-                <li class="news__item">
-                    <img class="news__image" src="images/news-img.png" alt="news image" width="360" height="214">
-                    <data class="news__data">20.10.2021</data>
-                    <a href="#" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
-                    <p class="news__text">
-                        На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
-                    </p>
-                </li>
-                <li class="news__item">
-                    <img class="news__image" src="images/news-img.png" alt="news image" width="360" height="214">
-                    <data class="news__data">20.10.2021</data>
-                    <a href="#" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
-                    <p class="news__text">
-                        На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
-                    </p>
-                </li>
-            </ul>
-
-            <a href="pages/news.html" class="news__more-link">Посмотреть все новости</a>
-
-        </div>
-    </section>
-
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="slick/slick/slick.min.js"></script>
-<script src="js/main.js"></script>
-
-
+<script src="../js/script.js"></script>
 
 </body>
 </html>
