adding news page

--- a/pages/news.html
+++ b/pages/news.html
@@ -16,7 +16,7 @@
 
 <style>
     .site-header {
-        background: linear-gradient(to top, rgba(48, 63, 149,0.5), rgb(48, 63, 149,0.6) );
+        background: linear-gradient(to top, rgba(48, 63, 149,0.6), rgb(48, 63, 149,0.7) );
     }
 
     .site-nav__dropdown-menu {
@@ -27,21 +27,15 @@
         box-shadow: rgba(48, 63, 149,0.3) 0px 4px 8px 0px;
     }
 
-
-    .second-dropdown .dropdown-link {
-        color: #303F95 !important;
-    }
-
     .option-langs {
         box-shadow: rgba(48, 63, 149,0.3) 0px 4px 8px 0px;
         color: #303F95;
     }
 
-    .option-lang:hover {
-        background: rgba(48, 63, 149, 0.5);
-    }
+    
+
 </style>
-<body>
+<body class="page">
 
        <!-- SITE HEADER  -->
 
@@ -249,8 +243,117 @@
 
         </div>
     </header>
-    
 
+
+
+<div class="news-title__wrapper">
+    <h1 class="news-title container">новости</h1>
+</div>    
+
+
+<ul class="news-list container">
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+    <li class="news__item">
+        <img class="news__image" src="../images/news-img.png" alt="news image" width="360" height="214">
+        <data class="news__data">20.10.2021</data>
+        <a href="./news-item.html" class="news__link">На чтениях-2021 пройдет обсуждение проектов смешанного обучения и управлению удаленной работой</a>
+        <p class="news__text">
+            На Пастуховских чтениях-2021 пройдет обсуждение проектов рекомендаций по организации смешанного обучения и управлению удаленной работой – по формированию системы мотивации научно...
+        </p>
+    </li>
+</ul>
+
+<div class="news__btn-wrapper container">
+    <button class="news__more-btn">Ko'proq yangiliklar</button>
+</div>
 
 
 
