adding main directions

--- a/index.html
+++ b/index.html
@@ -298,50 +298,66 @@
             <ul class="main-directions__list list">
                 <li class="main-directions__item">
                     <a href="pages/main-directions.html" class="main-directions__link">
-                        <div class="mian-derection__image-wrapper"></div>
-                        <span class="main-direction__title">Yo'nalish nomi</span>
+                        <div class="mian-derection__image-wrapper">
+                            <img src="images/digitalization.svg" alt="direction image" width="150" height="100">
+                        </div>
+                        <span class="main-direction__title">Suv xo'jaligini raqamlashtirish</span>
                     </a>
                 </li>
                 <li class="main-directions__item">
                     <a href="pages/main-directions.html" class="main-directions__link">
-                        <div class="mian-derection__image-wrapper"></div>
-                        <span class="main-direction__title">Yo'nalish nomi</span>
+                        <div class="mian-derection__image-wrapper">
+                            <img src="images/digitalization.svg" alt="direction image" width="150" height="100">
+                        </div>
+                        <span class="main-direction__title">Suv xo'jaligini raqamlashtirish</span>
                     </a>
                 </li>
                 <li class="main-directions__item">
                     <a href="pages/main-directions.html" class="main-directions__link">
-                        <div class="mian-derection__image-wrapper"></div>
-                        <span class="main-direction__title">Yo'nalish nomi</span>
+                        <div class="mian-derection__image-wrapper">
+                            <img src="images/digitalization.svg" alt="direction image" width="150" height="100">
+                        </div>
+                        <span class="main-direction__title">Suv xo'jaligini raqamlashtirish</span>
                     </a>
                 </li>
                 <li class="main-directions__item">
                     <a href="pages/main-directions.html" class="main-directions__link">
-                        <div class="mian-derection__image-wrapper"></div>
-                        <span class="main-direction__title">Yo'nalish nomi</span>
+                        <div class="mian-derection__image-wrapper">
+                            <img src="images/digitalization.svg" alt="direction image" width="150" height="100">
+                        </div>
+                        <span class="main-direction__title">Suv xo'jaligini raqamlashtirish</span>
                     </a>
                 </li>
                 <li class="main-directions__item">
                     <a href="pages/main-directions.html" class="main-directions__link">
-                        <div class="mian-derection__image-wrapper"></div>
-                        <span class="main-direction__title">Yo'nalish nomi</span>
+                        <div class="mian-derection__image-wrapper">
+                            <img src="images/digitalization.svg" alt="direction image" width="150" height="100">
+                        </div>
+                        <span class="main-direction__title">Suv xo'jaligini raqamlashtirish</span>
                     </a>
                 </li>
                 <li class="main-directions__item">
                     <a href="pages/main-directions.html" class="main-directions__link">
-                        <div class="mian-derection__image-wrapper"></div>
-                        <span class="main-direction__title">Yo'nalish nomi</span>
+                        <div class="mian-derection__image-wrapper">
+                            <img src="images/digitalization.svg" alt="direction image" width="150" height="100">
+                        </div>
+                        <span class="main-direction__title">Suv xo'jaligini raqamlashtirish</span>
                     </a>
                 </li>
                 <li class="main-directions__item">
                     <a href="pages/main-directions.html" class="main-directions__link">
-                        <div class="mian-derection__image-wrapper"></div>
-                        <span class="main-direction__title">Yo'nalish nomi</span>
+                        <div class="mian-derection__image-wrapper">
+                            <img src="images/digitalization.svg" alt="direction image" width="150" height="100">
+                        </div>
+                        <span class="main-direction__title">Suv xo'jaligini raqamlashtirish</span>
                     </a>
                 </li>
                 <li class="main-directions__item">
                     <a href="pages/main-directions.html" class="main-directions__link">
-                        <div class="mian-derection__image-wrapper"></div>
-                        <span class="main-direction__title">Yo'nalish nomi</span>
+                        <div class="mian-derection__image-wrapper">
+                            <img src="images/digitalization.svg" alt="direction image" width="150" height="100">
+                        </div>
+                        <span class="main-direction__title">Suv xo'jaligini raqamlashtirish</span>
                     </a>
                 </li>
             </ul>
