--- a/pages/main-directions.html
+++ b/pages/main-directions.html
@@ -247,13 +247,13 @@
 
      <div class="directions-wrapper">
             <div class="title-wrapper"> 
-                <h2 class="directions-title container">Yo'nalish nomi</h2>
+                <h2 class="directions-title container">Suv xo'jaligida raqamli texnologiyalarni rivojlantirish</h2>
             </div>
             
                 <div class="container">
                     <div class="img-wrapper">
-                        <!-- <img class="directions-image" src="" alt="derection image" width="900" height="500"> -->
-                        <span class="img-definitaion">Yo'nalish bo'yicha rasm</span>
+                        <img class="directions-image" src="../images/digitalization.svg" alt="derection image" width="900" height="500">
+                        <!-- <span class="img-definitaion">Yo'nalish bo'yicha rasm</span> -->
                     </div>
                  <p class="directions-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cumque eaque quos minima aliquid vel, 
