adding esantional links

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div class="site-hero"> 
             <ul class="list site-hero__carousel">
                 <li class="site-header-wrapper first-slide" >
-
+                    
                 </li>
                 <li class="site-header-wrapper second-slide" >
 
@@ -454,6 +454,94 @@
 <div class="videogallery">
     <h2 class="titlee">Videogallery</h2>
 </div>
+
+
+
+
+<!-- START ESENTIONAL LINKS -->
+
+    <section class="links">
+        <div class="container links__container">
+            <header class="links__header">
+                <h2 class="section__title">Foydali havolalar</h2>
+            </header>
+
+            <ul class="links__list">
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+                <li class="links__item">
+                    <a href="#">
+                        <img src="images/gerb.png" alt="title" width="90" height="90">
+                        <span class="links__title">Ўзбекистон Республикаси Президентининг расмий веб-сайти</span>
+                        <span>president.uz</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+<!-- END OF ESENTIONAL LINK  -->
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="slick/slick/slick.min.js"></script>
