adding items site hero

--- a/index.html
+++ b/index.html
@@ -233,16 +233,44 @@
     <div class="site-hero"> 
             <ul class="list site-hero__carousel">
                 <li class="site-header-wrapper first-slide" >
-                    
+                    <div class="container site-hero__item-container">
+                        <h2>Title goes here</h2>
+                        <p>
+                            Definition goes here
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum ipsam eaque, quas perferendis hic voluptate necessitatibus fugiat adipisci? Sed beatae voluptates et accusamus mollitia nulla eveniet excepturi ut fugiat tenetur!
+                        </p>
+                        <a href="#">Learn more</a>
+                    </div>
                 </li>
                 <li class="site-header-wrapper second-slide" >
-
+                    <div class="container site-hero__item-container">
+                        <h2>Title goes here</h2>
+                        <p>
+                            Definition goes here
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum ipsam eaque, quas perferendis hic voluptate necessitatibus fugiat adipisci? Sed beatae voluptates et accusamus mollitia nulla eveniet excepturi ut fugiat tenetur!
+                        </p>
+                        <a href="#">Learn more</a>
+                    </div>
                 </li>
                 <li class="site-header-wrapper third-slide" >
-
+                    <div class="container site-hero__item-container">
+                        <h2>Title goes here</h2>
+                        <p>
+                            Definition goes here
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum ipsam eaque, quas perferendis hic voluptate necessitatibus fugiat adipisci? Sed beatae voluptates et accusamus mollitia nulla eveniet excepturi ut fugiat tenetur!
+                        </p>
+                        <a href="#">Learn more</a>
+                    </div>
                 </li>
                 <li class="site-header-wrapper fourth-slide" >
-
+                    <div class="container site-hero__item-container">
+                        <h2>Title goes here</h2>
+                        <p>
+                            Definition goes here
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum ipsam eaque, quas perferendis hic voluptate necessitatibus fugiat adipisci? Sed beatae voluptates et accusamus mollitia nulla eveniet excepturi ut fugiat tenetur!
+                        </p>
+                        <a href="#">Learn more</a>
+                    </div>
                 </li>
             </ul>
     </div>
