adding mobile styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="slick/slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick/slick.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 
@@ -60,6 +61,14 @@
 
                     <button class="site-header__login">
                         Kirish <i class="fal fa-sign-in"></i>
+                    </button>
+
+                    <button style="display: none; width: 35px; height: 20px; background-color: transparent; border: none;" class="humburger-btn">
+                        <div style="display: flex; flex-direction: column;">
+                            <div class="humburger-item" style="background-color: #fff; height: 2px; width: 15px; margin-bottom: 7px;"></div>
+                            <div class="humburger-item" style="background-color: #fff; height: 2px; width: 25px; margin-bottom: 7px;"></div>
+                            <div class="humburger-item" style="background-color: #fff; height: 2px; width: 35px;"></div>
+                        </div>
                     </button>
                 </div>
             </div>
@@ -197,22 +206,7 @@
                             </ul>
                         </li>
                         <li class="site-nav__item">
-                            <a href="#" class="site-nav__link">Bog'lanish <i class="far fa-chevron-down"></i></a>
-                            <ul class="site-nav__dropdown-menu list">
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">fisrt item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="far fa-chevron-right"></i></a>
-                                    <ul class="site-nav__dropdown-menu second-dropdown list">
-                                        <li class="dropdown-item"><a href="#" class="dropdown-link">first item</a></li>
-                                        <li class="dropdown-item"><a href="#" class="dropdown-link">second item</a></li>
-                                        <li class="dropdown-item"><a href="#" class="dropdown-link">third item</a></li>
-                                        <li class="dropdown-item"><a href="#" class="dropdown-link">fourth item</a></li>
-                                        <li class="dropdown-item"><a href="#" class="dropdown-link">fifth item</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">third item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">fourth item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">fifth item</a></li>
-                            </ul>
+                            <a href="#" class="site-nav__link">Bog'lanish</a>
                         </li>
                     </ul>
     
