--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
                     <button style="display: none; width: 35px; height: 20px; background-color: transparent; border: none;" class="humburger-btn">
                         <div style="display: flex; flex-direction: column;">
-                            <div class="humburger-item" style="background-color: #fff; height: 2px; width: 15px; margin-bottom: 7px;"></div>
-                            <div class="humburger-item" style="background-color: #fff; height: 2px; width: 25px; margin-bottom: 7px;"></div>
-                            <div class="humburger-item" style="background-color: #fff; height: 2px; width: 35px;"></div>
+                            <div class="humburger-item" style="background-color: #303F95; height: 2px; width: 15px; margin-bottom: 7px;"></div>
+                            <div class="humburger-item" style="background-color: #303F95; height: 2px; width: 25px; margin-bottom: 7px;"></div>
+                            <div class="humburger-item" style="background-color: #303F95; height: 2px; width: 35px;"></div>
                         </div>
                     </button>
                 </div>
