--- a/test.html
+++ b/test.html
@@ -6,32 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-  <style>
-    body {
-      width: 100%;
-      height: 2000px;
-      overflow-x: hidden;
-    }
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    .fixed {
-      padding: 50px;
-      background-color: #333;
-      position: fixed;
-      top: 50px;
-      left: 50px;
-    }
-  </style>
+ 
 </head>
 <body>
 
-  <div style="position: absolute; top: 0;
-  left: 0;">
-    <div class="fixed">
-
-    </div>
-  </div>
+ 
+  <i class="fa-solid fa-bus"></i>
 
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/fontawesome.min.js" integrity="sha512-PoFg70xtc+rAkD9xsjaZwIMkhkgbl1TkoaRrgucfsct7SVy9KvTj5LtECit+ZjQ3ts+7xWzgfHOGzdolfWEgrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
 </body>
 </html>
