--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Styles  -->
     <link rel="stylesheet" href="slick/slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick/slick.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -60,7 +60,7 @@
                     </a>
 
                     <button class="site-header__login">
-                        Kirish <i class="fal fa-sign-in"></i>
+                        Kirish <i class="fa-solid fa-arrow-right-to-bracket"></i>
                     </button>
 
                     <button style="display: none; width: 35px; height: 20px; background-color: transparent; border: none;" class="humburger-btn">
@@ -77,7 +77,7 @@
                 <div class="site-header__popup-wrapper ">
                     <div class="site-header__popup-main">
                         <button class="popup-close">
-                            <i class="fal fa-times"></i>
+                            <i class="fa-solid fa-xmark"></i>
                         </button>
                         <header class="popup-header">
                             <img src="images/gerb.png" alt="gerb" width="60" height="60">
@@ -98,10 +98,10 @@
                 <div class="container site-nav__container">
                     <ul class="site-nav__list list">
                         <li class="site-nav__item">
-                            <a href="#" class="site-nav__link">Vazirlik <i class="far fa-chevron-down"></i></a>
+                            <a href="#" class="site-nav__link">Vazirlik <i class="fa-solid fa-angle-down"></i></a>
                             <ul class="site-nav__dropdown-menu list">
                                 <li class="dropdown-item"><a href="#" class="dropdown-link">fisrt item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="far fa-chevron-right"></i></a>
+                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="fa-solid fa-angle-right"></i></a>
                                     <ul class="site-nav__dropdown-menu second-dropdown list">
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">first item</a></li>
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">second item</a></li>
@@ -116,10 +116,10 @@
                             </ul>
                         </li>
                         <li class="site-nav__item">
-                            <a href="#" class="site-nav__link">Yangiliklar <i class="far fa-chevron-down"></i></a>
+                            <a href="#" class="site-nav__link">Yangiliklar <i class="fa-solid fa-angle-down"></i></a>
                             <ul class="site-nav__dropdown-menu list">
                                 <li class="dropdown-item"><a href="#" class="dropdown-link">fisrt item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="far fa-chevron-right"></i></a>
+                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="fa-solid fa-angle-right"></i></a>
                                     <ul class="site-nav__dropdown-menu second-dropdown list">
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">first item</a></li>
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">second item</a></li>
@@ -134,10 +134,10 @@
                             </ul>
                         </li>
                         <li class="site-nav__item">
-                            <a href="#" class="site-nav__link">Mediagalereya <i class="far fa-chevron-down"></i></a>
+                            <a href="#" class="site-nav__link">Mediagalereya <i class="fa-solid fa-angle-down"></i></a>
                             <ul class="site-nav__dropdown-menu list">
                                 <li class="dropdown-item"><a href="#" class="dropdown-link">fisrt item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="far fa-chevron-right"></i></a>
+                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="fa-solid fa-angle-right"></i></a>
                                     <ul class="site-nav__dropdown-menu second-dropdown list">
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">first item</a></li>
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">second item</a></li>
@@ -152,10 +152,10 @@
                             </ul>
                         </li>
                         <li class="site-nav__item">
-                            <a href="#" class="site-nav__link">Ma'lumot <i class="far fa-chevron-down"></i></a>
+                            <a href="#" class="site-nav__link">Ma'lumot <i class="fa-solid fa-angle-down"></i></a>
                             <ul class="site-nav__dropdown-menu list">
                                 <li class="dropdown-item"><a href="#" class="dropdown-link">fisrt item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="far fa-chevron-right"></i></a>
+                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="fa-solid fa-angle-right"></i></a>
                                     <ul class="site-nav__dropdown-menu second-dropdown list">
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">first item</a></li>
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">second item</a></li>
@@ -170,10 +170,10 @@
                             </ul>
                         </li>
                         <li class="site-nav__item">
-                            <a href="#" class="site-nav__link">Hujjatlar <i class="far fa-chevron-down"></i></a>
+                            <a href="#" class="site-nav__link">Hujjatlar <i class="fa-solid fa-angle-down"></i></a>
                             <ul class="site-nav__dropdown-menu list">
                                 <li class="dropdown-item"><a href="#" class="dropdown-link">fisrt item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="far fa-chevron-right"></i></a>
+                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="fa-solid fa-angle-right"></i></a>
                                     <ul class="site-nav__dropdown-menu second-dropdown list">
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">first item</a></li>
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">second item</a></li>
@@ -188,10 +188,10 @@
                             </ul>
                         </li>
                         <li class="site-nav__item">
-                            <a href="#" class="site-nav__link">Interaktiv xizmatlar <i class="far fa-chevron-down"></i></a>
+                            <a href="#" class="site-nav__link">Interaktiv xizmatlar <i class="fa-solid fa-angle-down"></i></a>
                             <ul class="site-nav__dropdown-menu list">
                                 <li class="dropdown-item"><a href="#" class="dropdown-link">fisrt item</a></li>
-                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="far fa-chevron-right"></i></a>
+                                <li class="dropdown-item"><a href="#" class="dropdown-link">second item <i class="fa-solid fa-angle-right"></i></a>
                                     <ul class="site-nav__dropdown-menu second-dropdown list">
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">first item</a></li>
                                         <li class="dropdown-item"><a href="#" class="dropdown-link">second item</a></li>
@@ -211,7 +211,7 @@
                     </ul>
     
                     <div class="site-nav__language">
-                        <span class="default-lang">O'zbek <i class="far fa-chevron-down"></i></span>
+                        <span class="default-lang">O'zbek <i class="fa-solid fa-angle-down"></i></span>
                         <div class="option-langs">
                             <span class="option-lang">Руский</span>
                             <span class="option-lang">English</span>
@@ -313,7 +313,7 @@
     </section>
 
 
-    <!-- MAIN DURECTIONS  -->
+    <!-- MAIN DIRECTIONS  -->
 
     <section class="main-directions">
 
@@ -645,7 +645,113 @@
 
 <!-- END OF ESENTIONAL LINK  -->
 
+
+
+<section class="site-footer">
+
+    <div class="container site-footer__container">
+        <div class="connection-info">
+            <a href="index.html" class="connection-info__link">
+                <img src="images/gerb.png" alt="gerb" width="80" height="80">
+                <span>O`zbekiston Respublikasi Suv xo`jaligi vazirligi</span>
+            </a>
+
+            <ul class="footer-list">
+                <li class="footer-item">
+                    <a href="#" class="footer-link">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Manzil: 100140, Toshkent sh. Qorasuv 4-daha 11<sup>a</sup>-uy</span>
+                    </a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link">
+                        <i class="fa-solid fa-bus"></i>
+                        <span>89, 63, 25 yo‘nalishli avtobuslarning «Qorasuv-2» bekati</span>
+                    </a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link">
+                        <i class="fa-solid fa-phone-flip"></i>
+                        <span>Ishonch telefoni: 1234</span>
+                    </a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link">
+                        <i class="fa-solid fa-phone-flip"></i>
+                        <span>Devonxona: (+998 71) 222-33-44</span>
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+
+        <div class="footer__main-directions">
+            <h3 class="footer__section-title">ASOSIY YO‘NALISHLAR</h3>
+            <ul class="footer-list">
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__main-directions">
+            <h3 class="footer__section-title">VAZIRLIK</h3>
+            <ul class="footer-list">
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+                <li class="footer-item">
+                    <a href="#" class="footer-link"><i class="fa-solid fa-chevron-right"></i> Main dicections</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer__connect">
+            <h3 class="footer__section-title">YANGILIKLARGA OBUNA BO‘LISH</h3>
+            <form action="">
+                <input type="email" placeholder="Email manzilingizni kiriting:">
+                <button type="submit"><i class="fa-solid fa-arrow-right"></i></button>
+            </form>
+        </div>
+
+    </div>
+
+</section>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/fontawesome.min.js" integrity="sha512-PoFg70xtc+rAkD9xsjaZwIMkhkgbl1TkoaRrgucfsct7SVy9KvTj5LtECit+ZjQ3ts+7xWzgfHOGzdolfWEgrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="slick/slick/slick.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js" integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/main.js"></script>
